--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -11,40 +11,51 @@
 
         <div class="form-group">
             {% for error in form.email.errors %}
-                <span style="color: red;">[ {{ error }} ]</span><br/>
+                <span class="error-msg">[ {{ error }} ]</span>
             {% endfor %}
             {{ form.email }}
             <div class="minor-text">Your email will be your username</div>
         </div>
 
+
         {{ form.firstname.label }}
+        <div class="form-group">
         {% for error in form.firstname.errors %}
-            <span style="color: red;">[ {{ error }} ]</span><br/>
+            <span class="error-msg">[ {{ error }} ]</span>
         {% endfor %}
         {{ form.firstname }}
+        </div>
 
         {{ form.lastname.label }}
+        <div class="form-group">
         {% for error in form.lastname.errors %}
-            <span style="color: red;">[ {{ error }} ]</span><br/>
+            <span class="error-msg">[ {{ error }} ]</span>
         {% endfor %}
         {{ form.lastname }}
+        </div>
 
         {{ form.password.label }}
+        <div class="form-group">
         {% for error in form.password.errors %}
-            <span style="color: red;">[ {{ error }} ]</span><br/>
+            <span class="error-msg">[ {{ error }} ]</span>
         {% endfor %}
         {{ form.password }}
+        </div>
 
         {{ form.password2.label }}
+        <div class="form-group">
         {% for error in form.password2.errors %}
-            <span style="color: red;">[ {{ error }} ]</span><br/>
+            <span class="error-msg">[ {{ error }} ]</span>
         {% endfor %}
         {{ form.password2 }}
+        </div>
 
-        {{ form.recaptcha }}
+        <div class="form-group">
         {% for error in form.recaptcha.errors %}
-            <span style="color: red;">[ {{ error }} ]</span><br/>
+            <span class="error-msg">[ {{ error }} ]</span>
         {% endfor %}
+        {{ form.recaptcha }}
+        </div>
 
         {{ form.submit(class_="submit-btn") }}
     </div>
