--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -8,16 +8,20 @@
     {{ form.csrf_token }}
     <div class="formgrid">
         {{ form.password.label }}
+        <div class="form-group">
         {% for error in form.password.errors %}
-            <span style="color: red;">[ {{ error }} ]</span>
+            <span class="error-msg">[ {{ error }} ]</span>
         {% endfor %}
         {{ form.password }}
+        </div>
 
         {{ form.password2.label }}
+        <div class="form-group">
         {% for error in form.password2.errors %}
-            <span style="color: red;">[ {{ error }} ]</span>
+            <span class="error-msg">[ {{ error }} ]</span>
         {% endfor %}
         {{ form.password2 }}
+        </div>
 
         {{ form.submit(class="submit-btn") }}
     </div>
