--- a/app/templates/auth/forgot_password.html
+++ b/app/templates/auth/forgot_password.html
@@ -8,10 +8,12 @@
     {{ form.csrf_token }}
     <div class="formgrid">
         {{ form.email.label }}
+        <div class="form-group">
         {% for error in form.email.errors %}
-            <span style="color: red;">[ {{ error }} ]</span><br/>
+            <span class="error-msg">[ {{ error }} ]</span>
         {% endfor %}
         {{ form.email }}
+        </div>
 
         {{ form.submit(class="submit-btn") }}
     </div>
