--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,10 +64,10 @@
 
             <main class="main-section">
                 {% block content %}
-                    {% with messages = get_flashed_messages() %}
+                    {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
-                            {% for message in messages %}
-                                <div class="alert alert-info" role="alert">{{ message }}</div>
+                            {% for category, message in messages %}
+                                <div class="alert-msg msg-{{ category }}">{{ message }}</div>
                             {% endfor %}
                         {% endif %}
                     {% endwith %}
