--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Personal website of Kevin Foong - Website & Mobile App Developer, based in Sydney, Australia">
         <title>{% block title %}{% endblock %}</title>
         <!-- favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='/apple-touch-icon.png') }}">
