--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -78,8 +78,10 @@
 
             <footer class="footer-section">
                 <div class="footer-icons">
-                    <a href="https://github.com/Kevinf7" style="text-decoration:none" target="_blank">
+                    <a href="https://github.com/Kevinf7">
                     <i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/kevin-foong-044794/">
+                    <i class="fab fa-linkedin"></i></a>
                 </div>
                 <small>&#169; 2019 kevin7.net</small>
             </footer>
