--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -61,50 +61,50 @@ input:-webkit-autofill:active  {
     padding: 10px 30px 10px 30px;
     display: grid;
     justify-items: start;
-    grid-gap: 2%;
     align-items: baseline;
+    grid-gap: 2%;
     background-color: #0B6198;
     margin-bottom: 1.4rem;
     flex-shrink: 0;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto auto;
 }
-.head-title {
+.site-title {
     grid-column: 1/2;
     grid-row: 1/2;
 }
-.head-title a {
+.site-title a {
     font-family: 'Anton', sans-serif;
     color: #EFEFEF;
     text-decoration: none;
 }
-.head-search {
-    grid-column: 1/2;
-    grid-row: 2/3;
+.site-search {
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
-.head-search > input {
+.site-search > input {
     font-family: inherit;
     font-size: 100%;
 }
-.head-search > input[type=text] {
+.site-search > input[type=text] {
     width: 130px;
 }
-.head-search > input[type=submit] {
+.site-search > input[type=submit] {
     width: 70px;
 }
-.nav-section {
+.site-nav {
     font-size: 16px;
-    grid-column: 1/2;
-    grid-row: 3/4;
+    grid-column: 1/3;
+    grid-row: 2/3;
 }
-.nav-section a {
+.site-nav a {
     text-decoration: none;
     color: #EFEFEF;
     padding-left: 2px;
     padding-right: 2px;
     font-size: 0.92rem;
 }
-.nav-section a:hover {
+.site-nav a:hover {
     /*same as #EFEFEF80 more browsers understand rgba*/
     color: rgba(238,238,238,0.5);
 }
@@ -377,11 +377,11 @@ th, td {
         grid-template-columns: auto 1fr auto;
         grid-template-rows: auto;
     }
-    .head-search {
+    .site-search {
         grid-column: 3/4;
         grid-row: 1/2;
     }
-    .nav-section {
+    .site-nav {
         grid-column: 2/3;
         grid-row: 1/2;
         justify-self: end;
