--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -168,6 +168,11 @@ input:-webkit-autofill:active  {
     padding-right: 20px;
     grid-column: 1/2;
     grid-row: 2/3;
+    max-width: 220px;
+    margin-bottom: 24px;
+}
+.content-sidebar h3:not(:first-child) {
+    margin-top: 24px;
 }
 .content-sidebar > ul {
     list-style: none;
