--- a/app/templates/admin_message/manage_message.html
+++ b/app/templates/admin_message/manage_message.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Manage Message{% endblock %}
+{% block title %}Admin | Manage Messages{% endblock %}
 
 {% block app_content %}
 
