--- a/app/templates/admin_tag/del_tag.html
+++ b/app/templates/admin_tag/del_tag.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Delete Tag{% endblock %}
+{% block title %}Admin | Delete Tag{% endblock %}
 
 {% block app_content %}
 <h2>Delete Tag</h2>
