--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_about %}active{% endblock %}
-{% block title %}About Me{% endblock %}
+{% block title %}About Kevin7.net{% endblock %}
 
 {% block app_content %}
 {{ about_html.content|safe }}
