--- a/app/templates/post/add_post.html
+++ b/app/templates/post/add_post.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Add Post{% endblock %}
+{% block title %}Admin | Add Post{% endblock %}
 
 {% block app_content %}
 <h2>Add Post</h2>
