--- a/app/templates/search/search.html
+++ b/app/templates/search/search.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Search Results{% endblock %}
 
 {% block app_content %}
 <h2>Search Results</h2>
