--- a/app/templates/admin_content/edit_content.html
+++ b/app/templates/admin_content/edit_content.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Edit Content{% endblock %}
+{% block title %}Admin | Edit Content{% endblock %}
 
 {% block app_content %}
 <h2>Edit Content</h2>
