--- a/app/templates/admin_content/manage_content.html
+++ b/app/templates/admin_content/manage_content.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Manage Content{% endblock %}
+{% block title %}Admin | Manage Content{% endblock %}
 
 {% block app_content %}
 <h2>Manage Content</h2>
