--- a/app/templates/admin_image/del_image.html
+++ b/app/templates/admin_image/del_image.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Delete Image{% endblock %}
+{% block title %}Admin | Delete Image{% endblock %}
 
 {% block app_content %}
 <h2>Delete Image</h2>
