--- a/app/templates/admin_image/manage_images.html
+++ b/app/templates/admin_image/manage_images.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Manage Images{% endblock %}
+{% block title %}Admin | Manage Images{% endblock %}
 
 {% block app_content %}
 <h2>Manage Images</h2>
