--- a/app/templates/admin_tag/edit_tag.html
+++ b/app/templates/admin_tag/edit_tag.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Edit Tag{% endblock %}
+{% block title %}Admin | Edit Tag{% endblock %}
 
 {% block app_content %}
 <h2>Edit Tag</h2>
