--- a/app/templates/admin_tag/manage_tags.html
+++ b/app/templates/admin_tag/manage_tags.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Manage Tags{% endblock %}
+{% block title %}Admin | Manage Tags{% endblock %}
 
 {% block app_content %}
 <h2>Manage Tags</h2>
