--- a/app/templates/main/post_det.html
+++ b/app/templates/main/post_det.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_home %}active{% endblock %}
-{% block title %}Post Detail{% endblock %}
+{% block title %}{{ post.heading }}{% endblock %}
 
 {% block app_content %}
 <h2>{{ post.heading }}</h2>
