--- a/app/templates/post/del_post.html
+++ b/app/templates/post/del_post.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block nav_admin %}active{% endblock %}
-{% block title %}Delete Post{% endblock %}
+{% block title %}Admin | Delete Post{% endblock %}
 
 {% block app_content %}
 <h2>Delete Post</h2>
