--- a/app/templates/main/contact.html
+++ b/app/templates/main/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Contact Kevin7.net{% endblock %}
+{% block title %}Contact Me{% endblock %}
 
 {% block app_content %}
 <h2>Contact</h2>
