--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -75,6 +75,10 @@
                 <td><a href="{{ url_for('static', filename='processing/snake_game.html') }}"><img src="{{ url_for('static', filename='images/snakegame_small.PNG') }}"></a></td>
                 <td><a href="{{ url_for('static', filename='processing/sun_moon.html') }}"><img src="{{ url_for('static', filename='images/sunmoon_small.PNG') }}"></a></td>
             </tr>
+            <tr>
+                <td><a href="{{ url_for('static', filename='processing/robots.html') }}"><img src="{{ url_for('static', filename='images/robots_small.PNG') }}"></a></td>
+                <td></td>
+            </tr>
         </table>
     </aside>
 </div>
