--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -76,7 +76,7 @@
                 <td><a href="{{ url_for('static', filename='processing/sun_moon.html') }}"><img src="{{ url_for('static', filename='images/sunmoon_small.PNG') }}"></a></td>
             </tr>
             <tr>
-                <td><a href="{{ url_for('static', filename='processing/robots.html') }}"><img src="{{ url_for('static', filename='images/robots_small.PNG') }}"></a></td>
+                <td><a href="{{ url_for('static', filename='processing/robots.html') }}"><img src="{{ url_for('static', filename='images/robots_small.png') }}"></a></td>
                 <td></td>
             </tr>
         </table>
