--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -68,15 +68,15 @@
         <p><small>Try these interactive sketches I made. Click ... move your mouse ...</small></p>
         <table>
             <tr>
-                <td><a href="{{ url_for('static', filename='processing/garden.html') }}"><img src="{{ url_for('static', filename='images/garden_small.PNG') }}"></a></td>
-                <td><a href="{{ url_for('static', filename='processing/stars.html') }}"><img src="{{ url_for('static', filename='images/stars_small.PNG') }}"></a></td>
+                <td><a href="{{ url_for('static', filename='processing/garden.html') }}"><img src="{{ url_for('static', filename='images/garden_small.png') }}" width="80" height="80"></a></td>
+                <td><a href="{{ url_for('static', filename='processing/stars.html') }}"><img src="{{ url_for('static', filename='images/stars_small.png') }}" width="80" height="80"></a></td>
             </tr>
             <tr>
-                <td><a href="{{ url_for('static', filename='processing/snake_game.html') }}"><img src="{{ url_for('static', filename='images/snakegame_small.PNG') }}"></a></td>
-                <td><a href="{{ url_for('static', filename='processing/sun_moon.html') }}"><img src="{{ url_for('static', filename='images/sunmoon_small.PNG') }}"></a></td>
+                <td><a href="{{ url_for('static', filename='processing/snake_game.html') }}"><img src="{{ url_for('static', filename='images/snakegame_small.png') }}" width="80" height="80"></a></td>
+                <td><a href="{{ url_for('static', filename='processing/sun_moon.html') }}"><img src="{{ url_for('static', filename='images/sunmoon_small.png') }}" width="80" height="80"></a></td>
             </tr>
             <tr>
-                <td><a href="{{ url_for('static', filename='processing/robots.html') }}"><img src="{{ url_for('static', filename='images/robots_small.png') }}"></a></td>
+                <td><a href="{{ url_for('static', filename='processing/robots.html') }}"><img src="{{ url_for('static', filename='images/robots_small.png') }}" width="80" height="80"></a></td>
                 <td></td>
             </tr>
         </table>
